--- a/package.json
+++ b/package.json
@@ -34,9 +34,20 @@
   "devDependencies": {
     "@angular/compiler-cli": "~8.0.0",
     "@ngtools/webpack": "~8.0.0",
+    "codelyzer": "^5.1.0",
     "nativescript-dev-webpack": "~1.0.0",
+    "prettier": "^1.18.2",
+    "tslint": "^5.19.0",
     "typescript": "~3.4.0"
   },
   "gitHead": "f28dbc60d74dd2cef4b645afd8fdd63bbb12c73e",
-  "readme": "NativeScript Application"
+  "readme": "NativeScript Application",
+  "prettier": {
+    "singleQuote": true,
+    "printWidth": 140
+  },
+  "scripts": {
+    "prettier": "prettier --write src/**/*.{js,scss,ts,json,less,css}",
+    "ci.tslint": "tslint '**/*.ts' --config 'tslint.json' --exclude '**/node_modules/**'"
+  }
 }
